fixed alignment

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a:hover, a:active, a:visited {
 }
 
 /* Adjust specific heading margins */
-h1, h3 {
+h1, h2, h3 {
     margin: 0;
 }
 
@@ -60,7 +60,7 @@ h1, h3 {
     background-color: #f2f2f2;
 }
 
-/* need to amend later */
+
 .right-top-content {
     display: flex;
     justify-content: center;
@@ -68,10 +68,12 @@ h1, h3 {
     flex-direction: column;
     height: 10%;
     background-color: #f2f2f2;
-    font-size: 1.5rem;
     margin: 5%;
     gap: 20%;
+}
 
+.right-top-content h2 {
+    font-size: 2.5rem;
 }
 
 
@@ -119,7 +121,7 @@ input {
     flex-direction: column;
     height: 10vh;
     align-content: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
 
